--- a/app/src/main/res/layout/adapter_session_view_layout.xml
+++ b/app/src/main/res/layout/adapter_session_view_layout.xml
@@ -18,6 +18,7 @@
         android:gravity="center"
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
+        android:fontFamily="@font/regular"
         android:paddingBottom="10dp"
         android:textSize="16sp"
         android:textColor="@color/colorPrimary"
@@ -32,6 +33,7 @@
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
+        android:fontFamily="@font/regular"
         android:textSize="16sp"
         android:textColor="@color/colorPrimary"
         android:text="2"
