--- a/app/src/main/res/layout/prompts_note.xml
+++ b/app/src/main/res/layout/prompts_note.xml
@@ -9,6 +9,7 @@
     <EditText
         android:id="@+id/editNotesEditText"
         android:hint="Edit Note"
+        android:fontFamily="@font/regular"
         android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="200dp">
