--- a/app/src/main/res/drawable/custom_textborder2.xml
+++ b/app/src/main/res/drawable/custom_textborder2.xml
@@ -1,22 +1,22 @@
-<?xml version="1.0" encoding="utf-8" ?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="false" >
-        <shape>
-            <gradient
-                android:startColor="#f20707"
-                android:endColor="#ff5959"
-                android:angle="45"
-                />
-            <corners android:topLeftRadius="0dp" android:topRightRadius="0dp"
-                android:bottomLeftRadius="10dp" android:bottomRightRadius="10dp"/>
-        </shape>
-    </item>
-    <item android:state_pressed="true" >
-        <shape>
-            <stroke
-                android:width="5px"
-                android:color="@color/buttonGreen" />
-            <corners android:radius="200dp" />
-        </shape>
-    </item>
-</selector>
+<?xml version="1.0" encoding="utf-8"?>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+<item
+    android:bottom="1dp"
+    android:left="-2dp"
+    android:right="-2dp"
+    android:top="-2dp">
+    <shape android:shape="rectangle" >
+        <stroke
+            android:width="0.1dp"
+            android:color="@color/toolbarColor" />
+
+        <solid android:color="#1Ff20707" />
+
+        <padding android:left="10dp"
+            android:right="10dp"
+            android:top="10dp"
+            android:bottom="10dp" />
+    </shape>
+</item>
+
+</layer-list>
