--- a/app/src/main/res/layout/adapter_view_layout.xml
+++ b/app/src/main/res/layout/adapter_view_layout.xml
@@ -26,6 +26,7 @@
             android:gravity="center"
             android:layout_height="wrap_content"
             android:paddingTop="10dp"
+            android:fontFamily="@font/bold"
             android:paddingBottom="8dp"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -41,6 +42,7 @@
             android:layout_height="wrap_content"
             android:paddingTop="10dp"
             android:paddingBottom="8dp"
+            android:fontFamily="@font/bold"
             android:textSize="16sp"
             android:textStyle="bold"
             android:textColor="@color/colorPrimary"
@@ -53,6 +55,7 @@
             android:textAlignment="center"
             android:gravity="center"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/bold"
             android:paddingTop="10dp"
             android:paddingBottom="8dp"
             android:textSize="16sp"
@@ -67,6 +70,7 @@
             android:textAlignment="center"
             android:gravity="center"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/bold"
             android:paddingTop="10dp"
             android:paddingBottom="8dp"
             android:textSize="16sp"
@@ -81,6 +85,7 @@
             android:textAlignment="center"
             android:gravity="center"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/bold"
             android:paddingTop="10dp"
             android:paddingBottom="8dp"
             android:textSize="16sp"
@@ -94,6 +99,7 @@
             android:textAlignment="center"
             android:gravity="center"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/bold"
             android:paddingTop="10dp"
             android:paddingBottom="8dp"
             android:textSize="16sp"
@@ -111,6 +117,7 @@
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:paddingBottom="10dp"
+        android:fontFamily="@font/regular"
         android:textSize="16sp"
         android:textColor="@color/colorPrimary"
         android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exe" />
