--- a/app/src/main/res/layout/fragment_create_game.xml
+++ b/app/src/main/res/layout/fragment_create_game.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
+    android:background="@drawable/background_gradient"
     tools:layout_editor_absoluteY="81dp">
 
     <TextView
@@ -12,6 +12,7 @@
         android:layout_width="90dp"
         android:layout_height="20dp"
         android:layout_marginStart="8dp"
+        android:fontFamily="@font/regular"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:gravity="center"
@@ -30,6 +31,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:ems="10"
+        android:fontFamily="@font/regular"
         android:gravity="center"
         android:inputType="numberDecimal"
         android:singleLine="true"
@@ -46,6 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
+        android:fontFamily="@font/regular"
         android:background="@drawable/button_gradient"
         android:text="Play Game"
         android:textColor="@color/colorButtonText"
@@ -101,6 +104,7 @@
         android:layout_alignStart="@+id/minute_picker"
         android:layout_below="@+id/minute_picker"
         android:layout_marginBottom="16dp"
+        android:fontFamily="@font/regular"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -129,6 +133,7 @@
         android:layout_alignStart="@+id/second_picker"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
+        android:fontFamily="@font/regular"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
@@ -172,6 +177,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
+        android:fontFamily="@font/regular"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:ems="10"
@@ -194,6 +200,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
+        android:fontFamily="@font/regular"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:ems="10"
@@ -214,6 +221,7 @@
         android:layout_height="20dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:fontFamily="@font/regular"
         android:layout_marginTop="6dp"
         android:gravity="center"
         android:text="Pad Light Up "
@@ -232,6 +240,7 @@
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
         android:gravity="center"
+        android:fontFamily="@font/regular"
         android:text="Pad Light Delay"
         android:textColor="@color/colorPrimary"
         app:layout_constraintTop_toBottomOf="@+id/padLightUpDelayTime"
@@ -247,6 +256,7 @@
         android:layout_marginEnd="8dp"
         android:padding="10dp"
         android:switchPadding="5dp"
+        android:fontFamily="@font/regular"
         android:text="By Hits"
         android:textColor="@color/colorPrimary"
         android:theme="@style/SwitchTheme"
