--- a/app/src/main/res/layout/fragment_game_mode_select.xml
+++ b/app/src/main/res/layout/fragment_game_mode_select.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
+    android:background="@drawable/background_gradient"
     tools:layout_editor_absoluteY="81dp">
 
     <Button
@@ -16,6 +16,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="16dp"
         android:layout_marginStart="8dp"
+        android:fontFamily="@font/regular"
         android:layout_marginTop="8dp"
         android:background="@drawable/home_play_color"
         android:text="Random"
@@ -34,6 +35,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="16dp"
+        android:fontFamily="@font/regular"
         android:layout_marginTop="8dp"
         android:background="@drawable/home_play_color"
         android:text="Manual"
