--- a/app/src/main/res/layout/fragment_stats.xml
+++ b/app/src/main/res/layout/fragment_stats.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
+    android:background="@drawable/background_gradient"
     tools:context=".ui.main.StatsFragment">
 
     <LinearLayout
@@ -27,6 +27,7 @@
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:gravity="center"
+            android:fontFamily="@font/regular"
             android:layout_gravity="center_vertical"
             android:textSize="20sp"
             android:textColor="@color/colorPrimary"
@@ -37,6 +38,7 @@
             android:layout_width="22dp"
             android:layout_height="wrap_content"
             android:textAlignment="center"
+            android:fontFamily="@font/regular"
             android:gravity="center"
             android:layout_gravity="center_vertical"
             android:textSize="20sp"
@@ -64,7 +66,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:dividerHeight="3dp"
-            android:divider="@color/background"
+            android:divider="#00000000"
             android:visibility="visible">
         </com.baoyz.swipemenulistview.SwipeMenuListView>
 
@@ -73,7 +75,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:dividerHeight="3dp"
-            android:divider="@color/background"
+            android:divider="#00000000"
             android:visibility="gone"/>
 
     </LinearLayout>
