--- a/app/src/main/res/layout/home_screen.xml
+++ b/app/src/main/res/layout/home_screen.xml
@@ -3,16 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/back_gradient">
+    android:background="@drawable/home_back_gradient">
 
     <Button
         android:id="@+id/home_play_btn"
-
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:background="@drawable/home_play_color"
         android:drawableRight = "@drawable/ic_play"
+        android:fontFamily="@font/regular"
         android:drawablePadding="2dip"
         android:paddingLeft="30dip"
         android:paddingRight="26dip"
