--- a/app/src/main/res/layout/layout_player_box.xml
+++ b/app/src/main/res/layout/layout_player_box.xml
@@ -17,6 +17,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Player 0"
+        android:fontFamily="@font/regular"
         android:textColor="@color/colorBlueLight"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -34,6 +35,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
+        android:fontFamily="@font/regular"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="0"
@@ -53,6 +55,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
+        android:fontFamily="@font/regular"
         android:layout_marginTop="16dp"
         android:text="0"
         android:textColor="@android:color/holo_red_light"
